syntax = "proto3";

option go_package = "github.com/cherry-game/cherry/net/proto/proto;cherryProto";

package cherryProto;

// member data
message Member {
  string              nodeId = 1;     // node id
  string              nodeType = 2;   // node type
  string              address = 3;    // rpc ip address
  map<string, string> settings = 4;   // node settings data
  //map<string, int32>  routes   = 5; // route list  key:route name,value:status 0.enable 1.disable
}

// member list data
message MemberList {
  repeated Member list = 1;
}

// cross node request data
message Request {
  string sid = 1;                    // session id
  int64  uid = 2;                    // user id
  string frontendId = 3;             // frontend id
  map<string, string>  setting = 4;  // session setting data
  bytes  context = 5;                // context data to bytes
  int32  msgType = 11;               // msg type(request,notify,response,push)
  uint32 msgId = 12;                 // client message id
  string route = 13;                 // route name
  bytes  data = 14;                  // protocol data
  bool   isError = 15;               // is error
}

// cross node response data
message Response {
  int32 code = 1; // message code
  bytes data = 2; // message data
}

// push data
message Push {
  string route = 1; // route name
  int64  uid = 2;   // uid
  bytes  data = 3;  // message data
}

// kick data
message Kick {
  int64 uid = 1;   // uid
  bytes data = 2;  // message data
  bool  close = 3; // is close connection
}